@@ -27,7 +27,13 @@ END
 open Table
 open Extract_env
 
+let pr_language = function
+  | Ocaml -> str "Ocaml" 
+  | Haskell -> str "Haskell"
+  | Scheme -> str "Scheme"
+
 VERNAC ARGUMENT EXTEND language
+PRINTED BY pr_language
 | [ "Ocaml" ] -> [ Ocaml ]
 | [ "Haskell" ] -> [ Haskell ]
 | [ "Scheme" ] -> [ Scheme ]
