@@ -118,6 +118,9 @@ EXTEND
     [ [ e = LIDENT; "("; s = LIDENT; ")" ->
         let t, g = Q_util.interp_entry_name loc e "" in
         VernacNonTerm (loc, t, g, Some s)
+      | e = LIDENT; "("; s = LIDENT; ","; sep = STRING; ")" ->
+        let t, g = Q_util.interp_entry_name loc e sep in
+        VernacNonTerm (loc, t, g, Some s)
       | s = STRING ->
         VernacTerm s
     ] ]
