@@ -1,9 +1,18 @@
 Changes since V8.2
 ==================
 
+Tactics
+
 - "discriminate" now performs intros before trying to discriminate an
   hypothesis of the goal (previously it applied intro only if the goal
   had the form t1<>t2).
+- rewrite now supports rewriting on ad hoc equalities such as eq_true.
+
+Tools
+
+- New coqtop/coqc option -beautify to reformat .v files (usable
+  e.g. to globally update notations).
+- New tool beautify-archive to beautify a full archive of developments.
 
 Changes from V8.1 to V8.2
 =========================
